grammars/DijkstraParser.java
// Generated from Dijkstra.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DijkstraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, EQ=2, GT=3, GTE=4, GUARD=5, LBRACE=6, LPAR=7, LT=8, LTE=9, LBRACKET=10, 
		MINUS=11, NEQ=12, PLUS=13, RBRACE=14, RPAR=15, RBRACKET=16, SEMICOLON=17, 
		COLON=18, SLASH=19, STAR=20, MOD=21, DIV=22, TILDE=23, COMMA=24, DOT=25, 
		OR=26, AND=27, BOOLEAN=28, FALSE=29, FI=30, IF=31, INPUT=32, INT=33, FLOAT=34, 
		LOOP=35, PRINT=36, PROGRAM=37, CLASS=38, TRUE=39, DO=40, OD=41, PROC=42, 
		FUN=43, RETURN=44, R=45, W=46, RW=47, ID=48, FLOATCONSTANT=49, INTEGER=50, 
		WS=51, COMMENT=52;
	public static final int
		RULE_dijkstraText = 0, RULE_classdeClaration = 1, RULE_classBody = 2, 
		RULE_program = 3, RULE_declaration = 4, RULE_variableDeclaration = 5, 
		RULE_arrayDeclaration = 6, RULE_precedureDeclaration = 7, RULE_functionDeclaration = 8, 
		RULE_classname = 9, RULE_propertylist = 10, RULE_property = 11, RULE_accessSpec = 12, 
		RULE_parameterlist = 13, RULE_parameter = 14, RULE_type = 15, RULE_typelist = 16, 
		RULE_idlist = 17, RULE_statement = 18, RULE_assignStatement = 19, RULE_inputStatement = 20, 
		RULE_outputStatement = 21, RULE_iterativeStatement = 22, RULE_compoundStatement = 23, 
		RULE_alternativeStatement = 24, RULE_returnStatement = 25, RULE_procedurecall = 26, 
		RULE_methodcall = 27, RULE_compoundbody = 28, RULE_varlist = 29, RULE_var = 30, 
		RULE_guard = 31, RULE_expression = 32, RULE_functioncall = 33, RULE_arrayaccessor = 34, 
		RULE_constructor = 35, RULE_expressionlist = 36;
	public static final String[] ruleNames = {
		"dijkstraText", "classdeClaration", "classBody", "program", "declaration", 
		"variableDeclaration", "arrayDeclaration", "precedureDeclaration", "functionDeclaration", 
		"classname", "propertylist", "property", "accessSpec", "parameterlist", 
		"parameter", "type", "typelist", "idlist", "statement", "assignStatement", 
		"inputStatement", "outputStatement", "iterativeStatement", "compoundStatement", 
		"alternativeStatement", "returnStatement", "procedurecall", "methodcall", 
		"compoundbody", "varlist", "var", "guard", "expression", "functioncall", 
		"arrayaccessor", "constructor", "expressionlist"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'<-'", "'='", "'>'", "'>='", "'::'", "'{'", "'('", "'<'", "'<='", 
		"'['", "'-'", "'~='", "'+'", "'}'", "')'", "']'", "';'", "':'", "'/'", 
		"'*'", "'mod'", "'div'", "'~'", "','", "'.'", "'|'", "'&'", "'boolean'", 
		"'false'", "'fi'", "'if'", "'input'", "'int'", "'float'", "'loop'", "'print'", 
		"'program'", "'class'", "'true'", "'do'", "'od'", "'proc'", "'fun'", "'return'", 
		"'R'", "'W'", "'RW'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ASSIGN", "EQ", "GT", "GTE", "GUARD", "LBRACE", "LPAR", "LT", "LTE", 
		"LBRACKET", "MINUS", "NEQ", "PLUS", "RBRACE", "RPAR", "RBRACKET", "SEMICOLON", 
		"COLON", "SLASH", "STAR", "MOD", "DIV", "TILDE", "COMMA", "DOT", "OR", 
		"AND", "BOOLEAN", "FALSE", "FI", "IF", "INPUT", "INT", "FLOAT", "LOOP", 
		"PRINT", "PROGRAM", "CLASS", "TRUE", "DO", "OD", "PROC", "FUN", "RETURN", 
		"R", "W", "RW", "ID", "FLOATCONSTANT", "INTEGER", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dijkstra.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DijkstraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DijkstraTextContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DijkstraParser.EOF, 0); }
		public List<ClassdeClarationContext> classdeClaration() {
			return getRuleContexts(ClassdeClarationContext.class);
		}
		public ClassdeClarationContext classdeClaration(int i) {
			return getRuleContext(ClassdeClarationContext.class,i);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public DijkstraTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dijkstraText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterDijkstraText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitDijkstraText(this);
		}
	}

	public final DijkstraTextContext dijkstraText() throws RecognitionException {
		DijkstraTextContext _localctx = new DijkstraTextContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dijkstraText);
		int _la;
		try {
			setState(92);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(74);
					classdeClaration();
					}
					}
					setState(77); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CLASS );
				setState(79);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				program();
				setState(82);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(84);
					classdeClaration();
					}
					}
					setState(87); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CLASS );
				setState(89);
				program();
				setState(90);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdeClarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(DijkstraParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(DijkstraParser.ID, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(DijkstraParser.LPAR, 0); }
		public PropertylistContext propertylist() {
			return getRuleContext(PropertylistContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(DijkstraParser.RPAR, 0); }
		public ClassdeClarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdeClaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterClassdeClaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitClassdeClaration(this);
		}
	}

	public final ClassdeClarationContext classdeClaration() throws RecognitionException {
		ClassdeClarationContext _localctx = new ClassdeClarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classdeClaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(CLASS);
			setState(95);
			match(ID);
			setState(100);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(96);
				match(LPAR);
				setState(97);
				propertylist();
				setState(98);
				match(RPAR);
				}
			}

			setState(102);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitClassBody(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				declaration();
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << FLOAT) | (1L << PROC) | (1L << FUN) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DijkstraParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(DijkstraParser.ID, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(PROGRAM);
			setState(110);
			match(ID);
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(113);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(111);
					declaration();
					}
					break;
				case 2:
					{
					setState(112);
					statement();
					}
					break;
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACE) | (1L << BOOLEAN) | (1L << IF) | (1L << INPUT) | (1L << INT) | (1L << FLOAT) | (1L << PRINT) | (1L << DO) | (1L << PROC) | (1L << FUN) | (1L << RETURN) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public PrecedureDeclarationContext precedureDeclaration() {
			return getRuleContext(PrecedureDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(121);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				arrayDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				precedureDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				functionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ClassnameContext classname() {
			return getRuleContext(ClassnameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DijkstraParser.SEMICOLON, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case INT:
			case FLOAT:
				{
				setState(123);
				type();
				}
				break;
			case ID:
				{
				setState(124);
				classname();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(127);
			idlist();
			setState(129);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(128);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(DijkstraParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(DijkstraParser.RBRACKET, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DijkstraParser.SEMICOLON, 0); }
		public ArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitArrayDeclaration(this);
		}
	}

	public final ArrayDeclarationContext arrayDeclaration() throws RecognitionException {
		ArrayDeclarationContext _localctx = new ArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrayDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			type();
			setState(132);
			match(LBRACKET);
			setState(133);
			expression(0);
			setState(134);
			match(RBRACKET);
			setState(135);
			idlist();
			setState(137);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(136);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrecedureDeclarationContext extends ParserRuleContext {
		public TerminalNode PROC() { return getToken(DijkstraParser.PROC, 0); }
		public TerminalNode ID() { return getToken(DijkstraParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(DijkstraParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(DijkstraParser.RPAR, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public ParameterlistContext parameterlist() {
			return getRuleContext(ParameterlistContext.class,0);
		}
		public PrecedureDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_precedureDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterPrecedureDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitPrecedureDeclaration(this);
		}
	}

	public final PrecedureDeclarationContext precedureDeclaration() throws RecognitionException {
		PrecedureDeclarationContext _localctx = new PrecedureDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_precedureDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(PROC);
			setState(140);
			match(ID);
			setState(141);
			match(LPAR);
			setState(143);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << FLOAT) | (1L << ID))) != 0)) {
				{
				setState(142);
				parameterlist();
				}
			}

			setState(145);
			match(RPAR);
			setState(146);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(DijkstraParser.FUN, 0); }
		public TerminalNode ID() { return getToken(DijkstraParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(DijkstraParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(DijkstraParser.RPAR, 0); }
		public TerminalNode COLON() { return getToken(DijkstraParser.COLON, 0); }
		public TypelistContext typelist() {
			return getRuleContext(TypelistContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public ParameterlistContext parameterlist() {
			return getRuleContext(ParameterlistContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(FUN);
			setState(149);
			match(ID);
			setState(150);
			match(LPAR);
			setState(152);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << FLOAT) | (1L << ID))) != 0)) {
				{
				setState(151);
				parameterlist();
				}
			}

			setState(154);
			match(RPAR);
			setState(155);
			match(COLON);
			setState(156);
			typelist(0);
			setState(157);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassnameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DijkstraParser.ID, 0); }
		public ClassnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterClassname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitClassname(this);
		}
	}

	public final ClassnameContext classname() throws RecognitionException {
		ClassnameContext _localctx = new ClassnameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_classname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertylistContext extends ParserRuleContext {
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DijkstraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DijkstraParser.COMMA, i);
		}
		public PropertylistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertylist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).enterPropertylist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DijkstraListener ) ((DijkstraListener)listener).exitPropertylist(this);
		}
	}
